# pelican-data-loader

./: .dockerignore  README.md  debug_sha256.ipynb  docker-compose.yml  download.ipynb  example.env  pyproject.toml
.github/instructions/: python.instructions.md
app/: Dockerfile  constant.py  db_connection.py  main.py  state.py
app/.streamlit/: config.toml
app/tabs/: __init__.py  _generate.py  _info.py  _publish.py  _upload.py  dataset_info.py  discover.py  generate.py  info.py  ingest.py  publish.py  upload.py
data/: bird_migration.json  bird_migration_metadata.json  datasets.db
notebooks/: consume_dataset.ipynb  croissant-generator.ipynb  croissant_generator.ipynb  download_bigger_dataset.ipynb  fsspec.ipynb  get_licenses.ipynb  integration_person_api.ipynb  jsonld_to_db.ipynb  pelican_layer.ipynb  s3_direct_access_example.ipynb  setup_minio.ipynb  setup_self_hosted_minio.ipynb  speed_test.ipynb  test_croissant.ipynb  test_doit_s3.ipynb
notebooks/metadata_creation/: Image_create_metadata.ipynb  Image_parquet_metadata.ipynb  csv_metadata.ipynb
pelican_data_loader/: config.py  data.py  db.py  utils.py
pelican_data_loader/data/: licenses.jsonl
pelican_loader/: utils.py
s3/: docker-compose.yml
scripts/: pull_licenses.py  rsync.sh
