[project]
name = "pelican-data-loader"
version = "0.1.0"
description = "Pelican Platform backed data loader"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.38.13",
    "datasets>=3.6.0",
    "minio>=7.2.15",
    "mlcroissant>=1.0.17",
    "pandas>=2.2.3",
    "pydantic>=2.11.4",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
