[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["pelican_data_loader/**/*.py"]

[tool.hatch.build.targets.wheel]
packages = ["pelican_data_loader"]

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "pelican-data-loader"
version = "0.1.0"
description = "Pelican Platform backed data loader"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pelicanfs @ git+https://github.com/UW-Madison-DSI/pelicanfs.git",
    "datasets>=3.6.0",
    "httpx>=0.28.1",
    "minio>=7.2.15",
    "mlcroissant>=1.0.17",
    "pandas>=2.2.3",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "fsspec>=2025.3.0",
    "datacite>=1.2.0",
    "sqlmodel>=0.0.24",
    "streamlit>=1.46.1",
    "pydantic-settings>=2.10.1",
    "s3fs>=2025.3.0",
]

[project.optional-dependencies]
dev = [
    "beautifulsoup4>=4.13.4",
    "ipykernel>=6.29.5",
]
